# advent-2021

./: README.md
elixir/: README.md  mix.exs
elixir/lib/: advent_2021.ex
elixir/lib/mix/tasks/: gen_puzzle.ex  gen_time_table.ex  solve.ex
elixir/lib/puzzles/: day_1.ex  day_10.ex  day_11.ex  day_12.ex  day_13.ex  day_14.ex  day_15.ex  day_16.ex  day_17.ex  day_18.ex  day_19.ex  day_2.ex  day_20.ex  day_21.ex  day_22.ex  day_23.ex  day_24.ex  day_25.ex  day_3.ex  day_4.ex  day_5.ex  day_6.ex  day_7.ex  day_8.ex  day_9.ex
elixir/output/: day_15_pt_1.txt  day_15_pt_2.txt
elixir/test/: advent_2021_test.exs
haskell/: haskell.cabal  hie.yaml
haskell/src/: day1.hs  day2.hs
