name:                haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=2.0
extra-source-files:  README.md

library
  exposed-modules:     Day1 Day2
  default-language:    Haskell2010
  build-depends:       base ^>=4.14.2.0,
                       raw-strings-qq ^>=1.1,
                       containers ^>=0.6.5.1,
                       split ^>=0.2.3.4,
                       aeson ^>=1.5.6.0,
                       unordered-containers,
                       text,
                       transformers

